<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="ch.hsr.challp.museum.AboutFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/poiHeader"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/header_img_height"
                android:contentDescription="@string/titleImageDescription"
                android:scaleType="centerCrop"
                android:src="@drawable/wolf" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="@dimen/element_spacing"
                    android:text="@string/begleiter_shutdown"
                    android:textSize="@dimen/font_large" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="@dimen/element_spacing_wide"
                    android:text="@string/begleiter_shutdown_thankyou"
                    android:textSize="@dimen/font_medium" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
